# Epic_Events_CRM

./: .coverage  .gitignore  Cahier_des_charges_epic_events.md  README.md  analyse_incoherences.md  comparaison_consigne_code.md  main.py  models.md  permissions.md  preparation_oral.md  prompt.md  pyproject.toml  recommandations_etapes_ecole.md  sentry.py  vues.md
app/: config.py
app/db/: config.py  init_db.py  session.py  transaction.py
app/models/: base.py  contract.py  customer.py  event.py  permission.py  role.py  user.py
app/repositories/: contract_repository.py  customer_repository.py  event_repository.py  user_repository.py
app/schemas/: contract.py  customer.py  event.py  user.py
app/services/: auth_service.py  contract_service.py  customer_service.py  event_service.py  permission_service.py  user_service.py
cli/: crm_interface.py  helpers.py  main.py  sentry.py
cli/views/: __init__.py  contracts.py  customers.py  events.py  users.py
tests/: conftest.py  test_auth.py  test_seed.py  test_services.py  test_user_service.py
tests/unit/: conftest.py
tests/unit/cli/: test_contracts_menu.py  test_customers_cli.py  test_events_menu_permissions.py  test_prompt_helper.py
tests/unit/models/: test_contract.py  test_customer.py  test_event.py  test_permission.py  test_role.py  test_user.py
tests/unit/repositories/: test_contract_repository.py  test_customer_repository.py  test_event_repository.py  test_user_repository.py
tests/units/: test_customer_service.py  test_prompt_helper.py  test_schemas_user.py  test_user_repository.py  test_user_service.py
(+28 files in other folders)
